Height responsiveness to vertically size the content to fit the screen and avoid overlap of the result view button. Also got the left and right scroll buttons working.

--- a/CommunityYouthConcepts/Website/wp-content/themes/cyconcepts/styles/slick-theme.css
+++ b/CommunityYouthConcepts/Website/wp-content/themes/cyconcepts/styles/slick-theme.css
@@ -2,51 +2,36 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    background: #fff url('../images/ajax-loader.gif') center center no-repeat;
 }
 
-/* Icons */
-@font-face
-{
-    font-family: 'slick';
-    font-weight: normal;
-    font-style: normal;
-
-    src: url('./fonts/slick.eot');
-    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
-}
 /* Arrows */
+.slick-next {background:url(../images/nextprev.png);background-position-y:50px;}
+.slick-prev {background:url(../images/nextprev.png);background-position-y:0px;}
 .slick-prev,
 .slick-next
 {
-    font-size: 0;
-    line-height: 0;
-
+    font-size:0;
+    line-height:0;
     position: absolute;
-    top: 50%;
-
+    top: 40%;    
     display: block;
 
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 49px;
     margin-top: -10px;
     padding: 0;
 
     cursor: pointer;
-
-    color: transparent;
     border: none;
     outline: none;
-    background: transparent;
 }
 .slick-prev:hover,
 .slick-prev:focus,
 .slick-next:hover,
 .slick-next:focus
 {
-    color: transparent;
     outline: none;
-    background: transparent;
 }
 .slick-prev:hover:before,
 .slick-prev:focus:before,
@@ -84,14 +69,7 @@
     right: -25px;
     left: auto;
 }
-.slick-prev:before
-{
-    content: '←';
-}
-[dir='rtl'] .slick-prev:before
-{
-    content: '→';
-}
+
 
 .slick-next
 {
@@ -101,14 +79,6 @@
 {
     right: auto;
     left: -25px;
-}
-.slick-next:before
-{
-    content: '→';
-}
-[dir='rtl'] .slick-next:before
-{
-    content: '←';
 }
 
 /* Dots */
